--- a/components/match-list-question.html
+++ b/components/match-list-question.html
@@ -266,20 +266,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2.5" data-path="text-area.html">
-            
-                <a href="text-area.html">
-            
-                    
-                    Text Area
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.2.6" data-path="text-input.html">
+        <li class="chapter " data-level="1.4.2.5" data-path="text-input.html">
             
                 <a href="text-input.html">
             
@@ -401,9 +388,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11" data-path="plots.md">
+        <li class="chapter " data-level="1.4.11" data-path="plots.html">
             
-                <span>
+                <a href="plots.html">
             
                     
                     Plots
@@ -524,7 +511,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="text.html">
+        <li class="chapter " data-level="1.4.18" data-path="text-area.html">
+            
+                <a href="text-area.html">
+            
+                    
+                    Text Area
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.19" data-path="text.html">
             
                 <a href="text.html">
             
@@ -537,7 +537,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="timer.html">
+        <li class="chapter " data-level="1.4.20" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -550,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="latex.html">
+        <li class="chapter " data-level="1.4.21" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -563,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.22" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -640,6 +640,26 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="match-list-question">Match List Question</h1>
+<p>An ISLE component that renders a question in which the learner has to match elements from two lists with each other in the correct way.</p>
+<h4 id="example">Example</h4>
+<pre class="language-"><code class="lang-javascript"><span class="token operator">&lt;</span>MatchListQuestion
+    question<span class="token operator">=</span><span class="token string">&quot;Please match the correct surnames and first names.&quot;</span>
+    elements<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span>
+        <span class="token punctuation">{</span> a<span class="token punctuation">:</span> <span class="token string">&apos;Ronald&apos;</span><span class="token punctuation">,</span> b<span class="token punctuation">:</span> <span class="token string">&apos;Fisher&apos;</span> <span class="token punctuation">}</span><span class="token punctuation">,</span>
+        <span class="token punctuation">{</span> a<span class="token punctuation">:</span> <span class="token string">&apos;Florence&apos;</span><span class="token punctuation">,</span> b<span class="token punctuation">:</span> <span class="token string">&apos;Nightingale&apos;</span> <span class="token punctuation">}</span><span class="token punctuation">,</span>
+        <span class="token punctuation">{</span> a<span class="token punctuation">:</span> <span class="token string">&apos;Karl&apos;</span><span class="token punctuation">,</span> b<span class="token punctuation">:</span> <span class="token string">&apos;Pearson&apos;</span> <span class="token punctuation">}</span><span class="token punctuation">,</span>
+    <span class="token punctuation">]</span><span class="token punctuation">}</span>
+    onSubmit<span class="token operator">=</span><span class="token punctuation">{</span> <span class="token punctuation">(</span> answers <span class="token punctuation">)</span> <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token punctuation">{</span>
+
+    <span class="token punctuation">}</span><span class="token punctuation">}</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
+</code></pre>
+<h4 id="options">Options</h4>
+<ul>
+<li><strong>elements</strong>: an <code>array</code> holding the correct pairs displayed at the top of the free text question component. Each <code>array</code> element must be an <code>object</code> with <code>a</code> and <code>b</code> properties.</li>
+<li><strong>onChange</strong>: callback <code>function</code> invoked every time the text area value changes. Default: <code>null</code>.</li>
+<li><strong>question</strong>: a <code>string</code> holding the question to be displayed at the top of the match list question component. Default: <code>null</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -683,7 +703,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Match List Question","level":"1.4.9","depth":2,"next":{"title":"Multiple Choice Question","level":"1.4.10","depth":2,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},"previous":{"title":"Lesson Submit","level":"1.4.8","depth":2,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/match-list-question.md","mtime":"2016-11-11T08:27:01.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:15:07.684Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Match List Question","level":"1.4.9","depth":2,"next":{"title":"Multiple Choice Question","level":"1.4.10","depth":2,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},"previous":{"title":"Lesson Submit","level":"1.4.8","depth":2,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/match-list-question.md","mtime":"2016-12-28T20:35:18.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:36:10.522Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
