--- a/components/plots.html
+++ b/components/plots.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Color Picker · ISLE Editor Documentation</title>
+        <title>Plots · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="dashboard.html" />
+    <link rel="next" href="density-plot.html" />
     
     
-    <link rel="prev" href="../components.html" />
+    <link rel="prev" href="multiple-choice-question.html" />
     
 
     </head>
@@ -187,7 +187,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter active" data-level="1.4.1" data-path="color-picker.html">
+        <li class="chapter " data-level="1.4.1" data-path="color-picker.html">
             
                 <a href="color-picker.html">
             
@@ -388,7 +388,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11" data-path="plots.html">
+        <li class="chapter active" data-level="1.4.11" data-path="plots.html">
             
                 <a href="plots.html">
             
@@ -624,7 +624,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Color Picker</a>
+        <a href=".." >Plots</a>
     </h1>
 </div>
 
@@ -639,32 +639,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="color-picker">Color Picker</h1>
-<p>A wrapper for the <a href="https://casesandberg.github.io/react-color/" target="_blank">react-color</a> colorpicker.</p>
-<h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>ColorPicker onChangeComplete<span class="token operator">=</span><span class="token punctuation">{</span> color <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token punctuation">{</span>
-    <span class="token keyword">const</span> out <span class="token operator">=</span> color<span class="token punctuation">;</span>
-    <span class="token comment" spellcheck="true">/* e.g., returns 
-        {
-            &quot;hsl&quot;: {&quot;h&quot;:~250,&quot;s&quot;:~0.4967,&quot;l&quot;:~0.2063,&quot;a&quot;:1},
-            &quot;hex&quot;:&quot;#231a4f&quot;,
-            &quot;rgb&quot;:{&quot;r&quot;:35,&quot;g&quot;:26,&quot;b&quot;:79,&quot;a&quot;:1},
-            &quot;hsv&quot;:{&quot;h&quot;:~250,&quot;s&quot;:~0.664,&quot;v&quot;:~0.3088,&quot;a&quot;:1},
-            &quot;oldHue&quot;:~250,
-            &quot;source&quot;:&quot;rgb&quot;
-        }
-    */</span>
-<span class="token punctuation">}</span><span class="token punctuation">}</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
-</code></pre>
-<h4 id="options">Options:</h4>
-<ul>
-<li><strong>color</strong>: <code>string</code> holding an HeX code or an <code>object</code> holding RGB or HSL values such as <code>{ r: 255, g: 255, b: 255 }</code> or <code>{ h: 0, s: 0, l: .10 }</code>, which determines the active color. Both accept an <code>a</code> property for alpha values other than one.</li>
-<li><strong>onChange</strong>: callback <code>function</code> invoked every time color is changed. Default: <code>null</code>.</li>
-<li><strong>onChangeComplete</strong>: callback <code>function</code> invoked once a color change is complete. Default: <code>null</code>.</li>
-<li><strong>disableAlpha</strong>: <code>boolean</code> governing whether to remove alpha slider and options. Default: <code>false</code>.</li>
-<li><strong>presetColors</strong>: <code>Array</code> of HeX <code>strings</code> specifying the default colors at the bottom of the colorpicker. Default: <code>[&apos;#D0021B&apos;, &apos;#F5A623&apos;, &apos;#F8E71C&apos;, &apos;#8B572A&apos;, &apos;#7ED321&apos;, &apos;#417505&apos;, &apos;#BD10E0&apos;, &apos;#9013FE&apos;, &apos;#4A90E2&apos;, &apos;#50E3C2&apos;, &apos;#B8E986&apos;, &apos;#000000&apos;, &apos;#4A4A4A&apos;, &apos;#9B9B9B&apos;, &apos;#FFFFFF&apos;]</code></li>
-<li><strong>width</strong>: <code>number</code> giving the width of the colorpicker (in px). Default: <code>200</code>.</li>
-</ul>
+                                <h1 id="plots">Plots</h1>
 
                                 
                                 </section>
@@ -692,12 +667,12 @@
 
             
                 
-                <a href="../components.html" class="navigation navigation-prev " aria-label="Previous page: ISLE Components">
+                <a href="multiple-choice-question.html" class="navigation navigation-prev " aria-label="Previous page: Multiple Choice Question">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="dashboard.html" class="navigation navigation-next " aria-label="Next page: Dashboard">
+                <a href="density-plot.html" class="navigation navigation-next " aria-label="Next page: Density Plot">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -708,7 +683,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Color Picker","level":"1.4.1","depth":2,"next":{"title":"Dashboard","level":"1.4.2","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},{"title":"Text Input","level":"1.4.2.5","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]}]},"previous":{"title":"ISLE Components","level":"1.4","depth":1,"path":"components.md","ref":"components.md","articles":[{"title":"Color Picker","level":"1.4.1","depth":2,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Dashboard","level":"1.4.2","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},{"title":"Text Input","level":"1.4.2.5","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]}]},{"title":"Draggable List","level":"1.4.3","depth":2,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Expire","level":"1.4.4","depth":2,"path":"components/expire.md","ref":"components/expire.md","articles":[]},{"title":"Feedback Buttons","level":"1.4.5","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},{"title":"Free Text Question","level":"1.4.6","depth":2,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},{"title":"Grid","level":"1.4.7","depth":2,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Lesson Submit","level":"1.4.8","depth":2,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},{"title":"Match List Question","level":"1.4.9","depth":2,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},{"title":"Multiple Choice Question","level":"1.4.10","depth":2,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},{"title":"Plots","level":"1.4.11","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Density Plot","level":"1.4.11.1","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.11.2","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},{"title":"R Help","level":"1.4.12","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},{"title":"R Output","level":"1.4.13","depth":2,"path":"components/r-output.md","ref":"components/r-output.md","articles":[]},{"title":"R Shell","level":"1.4.14","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},{"title":"R Table","level":"1.4.15","depth":2,"path":"components/r-table.md","ref":"components/r-table.md","articles":[]},{"title":"Slider","level":"1.4.16","depth":2,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.17","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},{"title":"Text Area","level":"1.4.18","depth":2,"path":"components/text-area.md","ref":"components/text-area.md","articles":[]},{"title":"Text","level":"1.4.19","depth":2,"path":"components/text.md","ref":"components/text.md","articles":[]},{"title":"Timer","level":"1.4.20","depth":2,"path":"components/timer.md","ref":"components/timer.md","articles":[]},{"title":"LaTeX Equations","level":"1.4.21","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},{"title":"Video Player","level":"1.4.22","depth":2,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/color-picker.md","mtime":"2016-11-17T20:41:46.348Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:36:10.522Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Plots","level":"1.4.11","depth":2,"next":{"title":"Density Plot","level":"1.4.11.1","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},"previous":{"title":"Multiple Choice Question","level":"1.4.10","depth":2,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/plots.md","mtime":"2016-12-28T20:17:17.435Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:36:10.522Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
