--- a/components/r-table.html
+++ b/components/r-table.html
@@ -266,20 +266,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2.5" data-path="text-area.html">
-            
-                <a href="text-area.html">
-            
-                    
-                    Text Area
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.2.6" data-path="text-input.html">
+        <li class="chapter " data-level="1.4.2.5" data-path="text-input.html">
             
                 <a href="text-input.html">
             
@@ -401,9 +388,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11" data-path="plots.md">
+        <li class="chapter " data-level="1.4.11" data-path="plots.html">
             
-                <span>
+                <a href="plots.html">
             
                     
                     Plots
@@ -524,7 +511,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="text.html">
+        <li class="chapter " data-level="1.4.18" data-path="text-area.html">
+            
+                <a href="text-area.html">
+            
+                    
+                    Text Area
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.19" data-path="text.html">
             
                 <a href="text.html">
             
@@ -537,7 +537,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="timer.html">
+        <li class="chapter " data-level="1.4.20" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -550,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="latex.html">
+        <li class="chapter " data-level="1.4.21" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -563,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.22" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -699,7 +699,7 @@ data`</span></span><span class="token punctuation">}</span>
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Table","level":"1.4.15","depth":2,"next":{"title":"Slider","level":"1.4.16","depth":2,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"previous":{"title":"R Shell","level":"1.4.14","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-table.md","mtime":"2016-12-28T19:11:12.479Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:15:07.684Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"R Table","level":"1.4.15","depth":2,"next":{"title":"Slider","level":"1.4.16","depth":2,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"previous":{"title":"R Shell","level":"1.4.14","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-table.md","mtime":"2016-12-28T19:11:12.479Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:36:10.522Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
