--- a/components/text-area.html
+++ b/components/text-area.html
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="text-input.html" />
+    <link rel="next" href="text.html" />
     
     
-    <link rel="prev" href="slider-input.html" />
+    <link rel="prev" href="switch.html" />
     
 
     </head>
@@ -266,20 +266,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.2.5" data-path="text-area.html">
-            
-                <a href="text-area.html">
-            
-                    
-                    Text Area
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.2.6" data-path="text-input.html">
+        <li class="chapter " data-level="1.4.2.5" data-path="text-input.html">
             
                 <a href="text-input.html">
             
@@ -401,9 +388,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11" data-path="plots.md">
+        <li class="chapter " data-level="1.4.11" data-path="plots.html">
             
-                <span>
+                <a href="plots.html">
             
                     
                     Plots
@@ -524,7 +511,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="text.html">
+        <li class="chapter active" data-level="1.4.18" data-path="text-area.html">
+            
+                <a href="text-area.html">
+            
+                    
+                    Text Area
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.19" data-path="text.html">
             
                 <a href="text.html">
             
@@ -537,7 +537,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="timer.html">
+        <li class="chapter " data-level="1.4.20" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -550,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="latex.html">
+        <li class="chapter " data-level="1.4.21" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -563,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.22" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -640,20 +640,7 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="text-area">Text Area</h1>
-<p>A text area component. Used ss a stand-alone component, changes should be handled via the <code>onChange</code> attribute. </p>
-<h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>TextArea
-    legend<span class="token operator">=</span><span class="token string">&quot;Your name&quot;</span>
-    defaultValue<span class="token operator">=</span><span class="token string">&quot;Enter text&quot;</span>
-<span class="token operator">/</span><span class="token operator">&gt;</span>
-</code></pre>
-<h4 id="options">Options:</h4>
-<ul>
-<li><strong>text</strong>: The option the text input is initialized with. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>legend</strong>: <code>string</code> to be displayed as the title of te component. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>onChange</strong>: Callback <code>function</code> invoked after each change of the text value. Default: <code>null</code>.
-A text input component. Usually, this will be used as part of an <a href="dashboard.html">ISLE dashboard</a>, but it can also be used standalone. In this case, you want to handle changes via the <code>onChange</code> attribute. </li>
-</ul>
+<p>A text area component. Used as a stand-alone component, changes should be handled via the <code>onChange</code> attribute. </p>
 <h4 id="example">Example:</h4>
 <pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>TextArea
     legend<span class="token operator">=</span><span class="token string">&quot;Please enter a few sentences&quot;</span>
@@ -695,12 +682,12 @@ A text input component. Usually, this will be used as part of an <a href="dashbo
 
             
                 
-                <a href="slider-input.html" class="navigation navigation-prev " aria-label="Previous page: Slider Input">
+                <a href="switch.html" class="navigation navigation-prev " aria-label="Previous page: Switch">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="text-input.html" class="navigation navigation-next " aria-label="Next page: Text Input">
+                <a href="text.html" class="navigation navigation-next " aria-label="Next page: Text">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -711,7 +698,7 @@ A text input component. Usually, this will be used as part of an <a href="dashbo
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Text Area","level":"1.4.2.5","depth":3,"next":{"title":"Text Input","level":"1.4.2.6","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]},"previous":{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text-area.md","mtime":"2016-12-28T20:05:14.002Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:15:07.684Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Text Area","level":"1.4.18","depth":2,"next":{"title":"Text","level":"1.4.19","depth":2,"path":"components/text.md","ref":"components/text.md","articles":[]},"previous":{"title":"Switch","level":"1.4.17","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text-area.md","mtime":"2016-12-28T20:16:38.391Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:36:10.522Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
